--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,15 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>My Astro site</h1>
+    <h1>Welcome to my crib</h1>
+    <h2>Wellness and high performance for everyone!</h2>
+    <p>
+      This is where I will post about my journey on Wellness and high
+      performance technology!
+    </p>
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
+    </p>
   </body>
 </html>
