--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,9 +20,10 @@
       This is where I will post about my journey on Wellness and high
       performance technology!
     </p>
-    <p>
-      This site will update as I complete more of the tutorial, so keep checking
-      back and see how my journey is going!
-    </p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
   </body>
 </html>
