--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-
+import "../styles/global.css";
+const pageTitle = "My Astro Learning Blog";
 ---
 
 <html lang="en">
@@ -8,13 +9,13 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>Welcome to my crib</h1>
+    <h1>{pageTitle}</h1>
     <h2>Wellness and high performance for everyone!</h2>
     <p>
       This is where I will post about my journey on Wellness and high
