--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,10 +17,24 @@ body {
 
 h1 {
   margin: 1rem 0;
-  font-size: 2.5rem;
+  color: purple;
+  font-size: 4rem;
 }
 
 /* nav styles */
+
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
 
 .nav-links {
   width: 100%;
@@ -62,5 +76,9 @@ h1 {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+  /* Hide the menu button on larger screens */
+  .hamburger {
+    display: none;
   }
 }
