--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const allPosts = await Astro.glob("../pages/posts/*.md");
+import BlogPost from "../components/BlogPost.astro";
 const pageTitle = "My Astro Learning Blog";
-console.log(allPosts.forEach((element) => console.log(element.url)));
+const allPosts = await Astro.glob("../pages/posts/*.md");
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -12,8 +12,10 @@ console.log(allPosts.forEach((element) => console.log(element.url)));
     technology!
   </p>
   <ul>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li>
+    {
+      allPosts.map((post) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
