--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,22 +7,28 @@ const { frontmatter } = Astro.props;
   <p>Written by {frontmatter.author}</p>
   <p>Publish on {frontmatter.pubDate.slice(0, 10)}</p>
   <p><em>{frontmatter.description}</em></p>
-  <div>
-    {frontmatter.tags.map((tag: any) => <p>{tag}</p>)}
+  <div class="tags">
+    {frontmatter.tags.map((tag: any) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}
   </div>
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
   <slot />
 </BaseLayout>
 <style>
-  h1 {
-    color: red;
+
+  a {
+    color: #00539F;
   }
-  div {
+  .tags{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap
   }
-  p {
-    color: blue;
+  .tag{
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
   }
+
 </style>
