--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -11,7 +11,25 @@ const uniqueTags = [
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div>
-    {uniqueTags.map((tag) => <p><a href={`/tags/${tag}`}>{tag}</a></p> )}
+  <div class="tags">
+    {uniqueTags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p> )}
   </div>
 </BaseLayout>
+
+<style>
+  a {
+    color: #00539F;
+  }
+  .tags{
+    display: flex;
+    flex-wrap: wrap
+  }
+  .tag{
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
+  }
+</style>
