--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from "../components/Greeting";
 const pageTitle = "Home Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>Additional title</h2>
+  <Greeting client:load messages={['que pedo diantre', 'nikaro', 'o la derrama', 'perro']} />
 </BaseLayout>
