--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,15 @@ h1 {
   font-size: 4rem;
 }
 
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 /* nav styles */
 
 .hamburger {
