Creating a collection of posts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,8 @@ const pageTitle = "Home Page";
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>Additional title</h2>
-  <Greeting client:load messages={['que pedo diantre', 'nikaro', 'o la derrama', 'perro']} />
+  <Greeting
+    client:load
+    messages={["que pedo diantre", "nikaro", "o la derrama", "perro"]}
+  />
 </BaseLayout>
