--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,30 +5,34 @@ const { frontmatter } = Astro.props;
 
 <BaseLayout pageTitle={frontmatter.title}>
   <p>Written by {frontmatter.author}</p>
-  <p>Publish on {frontmatter.pubDate.slice(0, 10)}</p>
+  <p>Publish on {frontmatter.pubDate.toLocaleString().slice(0, 9)}</p>
   <p><em>{frontmatter.description}</em></p>
   <div class="tags">
-    {frontmatter.tags.map((tag: any) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)}
+    {
+      frontmatter.tags.map((tag: any) => (
+        <p class="tag">
+          <a href={`/tags/${tag}`}>{tag}</a>
+        </p>
+      ))
+    }
   </div>
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
   <slot />
 </BaseLayout>
 <style>
-
   a {
-    color: #00539F;
+    color: #00539f;
   }
-  .tags{
+  .tags {
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
   }
-  .tag{
+  .tag {
     margin: 0.25em;
     border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
     font-size: 1.15em;
-    background-color: #F8FCFD;
+    background-color: #f8fcfd;
   }
-
 </style>
