--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,35 +1,43 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
-const pageTitle = 'Index tags'
+const pageTitle = "Index tags";
 
-const allPosts = await Astro.glob("../posts/*.md");
+const allPosts = await getCollection("posts");
 
-const uniqueTags = [
-    ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
-  ];
-  console.log("unique tags " + uniqueTags);
+const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+console.log("unique tags " + uniqueTags);
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="tags">
-    {uniqueTags.map((tag) => <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p> )}
+    {
+      uniqueTags.map((tag) => (
+        <p class="tag">
+          <a href={`/tags/${tag}`}>{tag}</a>
+        </p>
+      ))
+    }
+  </div>
+  <div>
+    <p>An animation here</p>
   </div>
 </BaseLayout>
 
 <style>
   a {
-    color: #00539F;
+    color: #00539f;
   }
-  .tags{
+  .tags {
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
   }
-  .tag{
+  .tag {
     margin: 0.25em;
     border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
     font-size: 1.15em;
-    background-color: #F8FCFD;
+    background-color: #f8fcfd;
   }
 </style>
